Sat Mar  1 19:06:47 2014  Eric Wong  <e@80x24.org>

	* gc.c (ruby_gc_set_params): simplify condition

Sat Mar  1 16:18:40 2014  Tanaka Akira  <akr@fsij.org>

	* ext/readline/readline.c (Init_readline): Use rl_hook_func_t instead
	  of Function to support readline-6.3.  (rl_hook_func_t is available
	  since readline-4.2.)
	  Reported by Dmitry Medvinsky.  [ruby-core:61141] [Bug #9578]

Sat Mar  1 16:05:58 2014  Eric Wong  <e@80x24.org>

	* gc.c (ruby_gc_set_params): fix building without RGenGC

Sat Mar  1 11:08:00 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: support dumping Encoding
	  objects.

	* ext/psych/lib/psych/visitors/to_ruby.rb: support loading Encoding
	  objects.

	* test/psych/test_encoding.rb: add test

	* ext/psych/lib/psych.rb: add version

Sat Mar  1 10:52:34 2014  Zachary Scott  <e@zzak.io>

	* README.EXT.ja: [DOC] Fix typo "macro macro" @utenmiki [Fixes GH-551]
	  https://github.com/ruby/ruby/pull/551

Fri Feb 28 11:16:55 2014  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* numeric.c: Fix Numeric#step with 0 unit [Bug #9575]

Thu Feb 27 17:59:01 2014  Zachary Scott  <e@zzak.io>

	* lib/optparse.rb: [DOC] Add example of generating help with optparse.
	  Patch by @joelmccracken documenting-ruby/ruby#19
	  https://github.com/documenting-ruby/ruby/pull/19

Thu Feb 27 12:10:09 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (ruby_num_interval_step_size): check signs and get rid
	  of implementation dependent behavior of negative division.
	  [ruby-core:61106] [Bug #9570]

Thu Feb 27 03:55:45 2014  Zachary Scott  <e@zzak.io>

	* thread.c: [DOC] Typo in comment for _FORTIFY_SOURCE [Fixes GH-548]
	  Patch by @qnet-herwin https://github.com/ruby/ruby/pull/548

Wed Feb 26 18:43:43 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (heap_pages_free_unused_pages): check tomb page availability
	  at first.
	  And return immediately if we don't touch sorted list any more.
